--- a/style.css
+++ b/style.css
@@ -14,17 +14,41 @@ section{
 h1{
     text-shadow: 1px 5px 2px black;
 }
+img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
+}
+h3{
+    font-size: 2rem;
+    text-shadow: 1px 1px 12px rgba(0, 0, 0, 0.8);;
+}
 .btn{
+    background: transparent;
     cursor: pointer;
     font-weight: bold;
-    padding: 5px 3%;
     flex: 1;
-    border-radius: 5px;
-    box-shadow: 0px 1px 1px black;
+    border: 0;
+    border-radius: 100%;
 }
-.btn:hover{
-    background-color: black;
-    color: white;
+.btn img:hover{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
+}
+.visual{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.won{
+    box-shadow: 0 0 10px rgb(0, 255, 42);
+}
+.lost{
+    box-shadow: 0 0 10px rgb(252, 0, 0);
+}
+.tied{
+    box-shadow: 0 0 10px rgb(26, 1, 253);
 }
 #rock{margin-left: 35%;}
 #scissors{margin-right: 35%;}
